Products
-ProductRequestDto
-ProductResponseDto
-Se cambio la forma de devolver listas en ProductService